// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: AvatarName matches snapshot 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  gap: 8px;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
}

.emotion-0:hover {
  cursor: pointer;
}

.emotion-1 {
  -webkit-flex: 0 0 28px;
  -ms-flex: 0 0 28px;
  flex: 0 0 28px;
}

.emotion-2 {
  margin: 0;
  font-size: 1rem;
  white-space: pre-wrap;
  letter-spacing: 0.5px;
  font-family: "Noto Sans",sans-serif;
  font-weight: 400;
  line-height: 1.5;
}

<a
  aria-label={null}
  aria-labelledby={null}
  data-mui-internal-clone-element={true}
  href="/accounts/123"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
>
  <span
    className="emotion-0"
  >
    <div
      address="123"
      className="emotion-1"
      id="Avatar"
    />
    <p
      className="MuiTypography-root MuiTypography-body1 emotion-2"
    >
      name
    </p>
  </span>
</a>
`;

exports[`component: AvatarName matches snapshot with imageUrl 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  gap: 8px;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
}

.emotion-0:hover {
  cursor: pointer;
}

.emotion-1 {
  -webkit-flex: 0 0 28px;
  -ms-flex: 0 0 28px;
  flex: 0 0 28px;
}

.emotion-2 {
  margin: 0;
  font-size: 1rem;
  white-space: pre-wrap;
  letter-spacing: 0.5px;
  font-family: "Noto Sans",sans-serif;
  font-weight: 400;
  line-height: 1.5;
}

<a
  aria-label={null}
  aria-labelledby={null}
  data-mui-internal-clone-element={true}
  href="/accounts/123"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
>
  <span
    className="emotion-0"
  >
    <div
      address="123"
      className="emotion-1"
      id="Avatar"
      imageUrl="https://s3.amazonaws.com/keybase_processed_uploads/f5b0771af36b2e3d6a196a29751e1f05_360_360.jpeg"
    />
    <p
      className="MuiTypography-root MuiTypography-body1 emotion-2"
    >
      name
    </p>
  </span>
</a>
`;
